--- a/index.html
+++ b/index.html
@@ -2,22 +2,10 @@
 var hash = window.location.hash;
 hash = hash.substr(1);
 
-function getJson(arr){
-    var theRequest = new Object();
+var url = hash.split('::');
 
-    for (var i = 0; i < arr.length; i++) {
-        var kye = arr[i].split("=")[0]
-        var value = arr[i].split("=")[1]
-        theRequest[kye] = value
-    }
-
-    return theRequest;
-}
-
-var url = getJson(hash.split('&'));
-
-var testsClass = url.c;
-var testsMethod = url.m;
+var testsClass = url[0];
+var testsMethod = url[1];
 
 var url = 'https://github.com/hunzhiwange/framework/search?q='+
     testsClass+'+'+testsMethod+'+&unscoped_q='+
